[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Actors/Enemies/Caranguejo/Caranguejo.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Actors/Enemies/Caranguejo/caranguejo4.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.6661
height = 65.3319

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.3331
height = 59.9979

[node name="Caranguejo" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Ignore",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.666656, -32.0001 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="RayCastLeftGround" type="RayCast2D" parent="."]
position = Vector2( -29.5671, -9.59555 )

[node name="RayCastLeftWall" type="RayCast2D" parent="."]
position = Vector2( -16.6298, -1.81107 )
rotation = 1.58064

[node name="RayCastRightGround" type="RayCast2D" parent="."]
position = Vector2( 29.0955, -7.84421 )

[node name="RayCastRightWall" type="RayCast2D" parent="."]
position = Vector2( 16.2971, -0.530191 )
rotation = -1.60968
